[package]
name = "sharphttp"
version = "0.2.0"
edition = "2021"
description = "A fast HTTP client implementation in Rust for Python"
authors = ["acatto <nothanks@example.com>"]
license = "MIT"
repository = "https://github.com/theoneandonlyacatto/sharphttp"

[lib]
name = "sharphttp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
hyper = { version = "0.14", features = ["full", "http2"] }
hyper-tls = "0.5"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
num_cpus = "1.13"
encoding_rs = "0.8"
bytes = "1.0"
urlencoding = "2.1"
libc = "0.2"
flate2 = "1.0"
brotli = "3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
